--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
         <a href="https://github.com/shouzo1">
           <i class="fab fa-github fa-2x"></i>
         </a>
-        <a href="https://www.instagram.com/debdob_tiago/">
+        <a href="https://www.instagram.com/shouzo_tiago/">
           <i class="fa fa-instagram" style="font-size:38px;"></i>
         </a>
         <a>
