--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,9 @@
           <li class="nav-item current">
             <a href="contact.html" class="nav-link"> How To Reach Me </a>
           </li>
+          <li class="nav-item">
+            <a href="teste.html" class="nav-link"> More Work </a>
+          </li>
         </ul>
       </nav>
     </header>
