--- a/teste.html
+++ b/teste.html
@@ -55,60 +55,101 @@
           <img src="img2/project1.jpg" style="width:100%"/>
           </a>
           <a href="img2/project1.jpg" >
-            <i class="fas fa-eye"></i> Compass
+            <i class="fas fa-eye"></i> Owl
           </a>
           <a href="img2/project2.png" data-lightbox="img" data-title="Compass">
           <img src="img2/project2.png" style="width:100%">
         </a>
           <a href="img/projects/project5.jpg" >
-            <i class="fas fa-eye"></i> Compass
+            <i class="fas fa-eye"></i> Character 
           </a>
-
+          
+          <a href="img2/project3.png" data-lightbox="img" data-title="Compass">
           <img src="img2/project3.png" style="width:100%">
-          <img src="img2/project4.png" style="width:100%">
+        </a>
+        <a href="img/projects/project3.jpg" >
+          <i class="fas fa-eye"></i> Faith Mirrors Edge
+        </a>
+        <a href="img2/project4.png" data-lightbox="img" data-title="Compass">
+          <img src="img2/project4.png" style="width:100%"></a>
+          <a href="img/projects/project4.jpg" >
+            <i class="fas fa-eye"></i> Empyrean
+          </a>
         </div>
         <div class="column">
-          <img src="img2/project5.png" style="width:100%"/>
-          <img src="img2/project6.png" style="width:100%">
-          <img src="img2/project7.png" style="width:100%">
-          <img src="img2/project8.jpg" style="width:100%">
+          <a href="img2/project5.png" data-lightbox="img" data-title="Compass">
+          <img src="img2/project5.png" style="width:100%"/></a>
+          <a href="img2/project6.png" data-lightbox="img" data-title="Compass">
+          <img src="img2/project6.png" style="width:100%"></a>
+          <a href="img2/project7.png" data-lightbox="img" data-title="Compass">
+          <img src="img2/project7.png" style="width:100%"></a>
+          <a href="img2/project8.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project8.jpg" style="width:100%"></a>
         </div>
         <div class="column">
-          <img src="img2/project9.jpg" style="width:100%">
-          <img src="img2/project10.png" style="width:100%">
-          <img src="img2/project11.jpg" style="width:100%">
-          <img src="img2/project12.png" style="width:100%">
+          <a href="img2/project9.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project9.jpg" style="width:100%"></a>
+          <a href="img2/project10.png" data-lightbox="img" data-title="Compass">
+          <img src="img2/project10.png" style="width:100%"></a>
+          <a href="img2/project11.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project11.jpg" style="width:100%"></a>
+          <a href="img2/project12.png" data-lightbox="img" data-title="Compass">
+          <img src="img2/project12.png" style="width:100%"></a>
         </div>
         <div class="column">
-          <img src="img2/project13.png" style="width:100%">
-          <img src="img2/project14.jpg" style="width:100%">
-          <img src="img2/project15.jpg" style="width:100%">
-          <img src="img2/project16.jpg" style="width:100%">
+          <a href="img2/project13.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project13.png" style="width:100%"></a>
+          <a href="img2/project14.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project14.jpg" style="width:100%"></a>
+          <a href="img2/project15.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project15.jpg" style="width:100%"></a>
+          <a href="img2/project16.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project16.jpg" style="width:100%"></a>
         </div>
         <div class="column">
-          <img src="img2/project17.jpg" style="width:100%">
-          <img src="img2/project18.jpg" style="width:100%">
-          <img src="img2/project19.jpg" style="width:100%">
-          <img src="img2/project20.jpg" style="width:100%">
+          <a href="img2/project17.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project17.jpg" style="width:100%"></a>
+          <a href="img2/project18.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project18.jpg" style="width:100%"></a>
+          <a href="img2/project19.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project19.jpg" style="width:100%"></a>
+          <a href="img2/project20.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project20.jpg" style="width:100%"></a>
         </div>
         <div class="column">
-          <img src="img2/project21.jpg" style="width:100%">
-          <img src="img2/project22.jpg" style="width:100%">
-          <img src="img2/project24.jpg" style="width:100%">
-          <img src="img2/project25.jpg" style="width:100%">
+          <a href="img2/project21.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project21.jpg" style="width:100%"></a>
+          <a href="img2/project22.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project22.jpg" style="width:100%"></a>
+          <a href="img2/project24.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project24.jpg" style="width:100%"></a>
+          <a href="img2/project25.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project25.jpg" style="width:100%"></a>
         </div>
         <div class="column">
-          <img src="img2/project26.jpg" style="width:100%">
-          <img src="img2/project27.jpg" style="width:100%">
-          <img src="img2/project28.jpg" style="width:100%">
-          <img src="img2/project29.jpg" style="width:100%">
+          <a href="img2/project26.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project26.jpg" style="width:100%"></a>
+          <a href="img2/project27.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project27.jpg" style="width:100%"></a>
+          <a href="img2/project28.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project28.jpg" style="width:100%"></a>
+          <a href="img2/project29.jpg" data-lightbox="img" data-title="Compass">
+          <img src="img2/project29.jpg" style="width:100%"></a>
         </div>
       </div>
       <div class="column">
-        <img src="img2/project30.jpg" style="width:100%">
-        <img src="img2/project31.jpg" style="width:100%">
-        <img src="img2/project32.jpg" style="width:100%">
-        <img src="img2/project33.jpg" style="width:100%">
+        <a href="img2/project30.jpg" data-lightbox="img" data-title="Compass">
+        <img src="img2/project30.jpg" style="width:100%"></a>
+        <a href="img2/project31.jpg" data-lightbox="img" data-title="Compass">
+        <img src="img2/project31.jpg" style="width:100%"></a>
+        <a href="img2/project32.jpg" data-lightbox="img" data-title="Compass">
+        <img src="img2/project32.jpg" style="width:100%"></a>
+        <a href="img/projects/project32.jpg" >
+          <i class="fas fa-eye"></i> Soldier 
+        </a>
+        <a href="img2/project33.jpg" data-lightbox="img" data-title="Compass">
+        <img src="img2/project33.jpg" style="width:100%"></a>
+        
       </div>
     </div>
       <script src="js/main.js"></script>
