--- a/home.html
+++ b/home.html
@@ -66,13 +66,13 @@
         <a href="https://www.facebook.com/profile.php?id=61556461990404">
           <i class="fab fa-facebook fa-2x"></i>
         </a>
-        <a href="https://www.linkedin.com/in/tiago-santos-5b96662b4">
+        <a href="https://www.linkedin.com/in/tiago-santos-445876166/">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
         <a href="https://github.com/shouzo1">
           <i class="fab fa-github fa-2x"></i>
         </a>
-        <a href="https://www.instagram.com/debdob_tiago/">
+        <a href="https://www.instagram.com/shouzo_tiago/">
           <i class="fa fa-instagram" style="font-size:38px;"></i>
         </a>
         <a>
