--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://kit.fontawesome.com/1185f71c25.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -78,6 +79,11 @@
         <a>
           <a href="https://www.youtube.com/watch?v=2YkJha47-LY&ab_channel=Shouzo">
           <i class="fa fa-youtube-play" style="font-size:38px"></i>
+        </a>
+        <a href="https://www.etsy.com/shop/DigityOne">
+          <i class="fa-brands fa-etsy" style="font-size:30px"></i>
+          <text> tsy </text>
+          
         </a>
       </div>
     </main>
