--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://kit.fontawesome.com/1185f71c25.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -10,6 +11,7 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/main.css" />
     <title>Welcome To My Portfolio</title>
@@ -49,18 +51,30 @@
       <h2 class="sm-heading">
         Designer, Programmer, UX/UI Designer & Web Designer
       </h2>
-      <div class="icons">
-        <a href="https://twitter.com/?lang=pt_pt">
+     <div class="icons">
+        <a href="https://twitter.com/TiagoSoaresdos">
           <i class="fab fa-twitter fa-2x"></i>
         </a>
-        <a href="https://www.facebook.com/profile.php?id=100004063903400">
+        <a href="https://www.facebook.com/profile.php?id=61556461990404">
           <i class="fab fa-facebook fa-2x"></i>
         </a>
-        <a href="https://www.linkedin.com/in/tiago-santos-38725a76/">
+        <a href="https://www.linkedin.com/in/tiago-santos-445876166/">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
         <a href="https://github.com/shouzo1">
           <i class="fab fa-github fa-2x"></i>
+        </a>
+        <a href="https://www.instagram.com/shouzo_tiago/">
+          <i class="fa fa-instagram" style="font-size:38px;"></i>
+        </a>
+        <a>
+          <a href="https://www.youtube.com/watch?v=2YkJha47-LY&ab_channel=Shouzo">
+          <i class="fa fa-youtube-play" style="font-size:38px"></i>
+        </a>
+        <a href="https://www.etsy.com/shop/DigityOne">
+          <i class="fa-brands fa-etsy" style="font-size:30px"></i>
+          <text> tsy </text>
+          
         </a>
       </div>
     </main>
