--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
           <li class="nav-item">
             <a href="contact.html" class="nav-link"> How To Reach Me </a>
           </li>
+          <li class="nav-item">
+            <a href="teste.html" class="nav-link"> More Work </a>
+          </li>
         </ul>
       </nav>
     </header>
