--- a/work.html
+++ b/work.html
@@ -52,11 +52,11 @@
    
     <div class="projects">
       <div class="item">
-        <a href="img/projects/project1.jpg" data-lightbox="mygallery" data-title="AutoPortrait">
+        <a href="img/projects/project1.jpg" data-lightbox="mygallery" data-title="Self Portrait">
           <img src="img/projects/project1.jpg" alt="PersonalCard" />
         </a>
         <a href="img/projects/project1.jpg">
-          <i class="fas fa-eye"></i> Auto Portrait
+          <i class="fas fa-eye"></i> Self Portrait
         </a>
       </div>
       <div class="item">
