--- a/about.html
+++ b/about.html
@@ -1,8 +1,6 @@
     <link rel="stylesheet" href="css/main.css" />
     <title>About Me</title>
-
-
-  <body>
+   <body>
     <header>
       <div class="menu-btn">
         <div class="btn-line"></div>
@@ -27,6 +25,9 @@
           </li>
           <li class="nav-item">
             <a href="teste.html" class="nav-link"> More Work </a>
+          </li>
+          <li class="nav-item">
+            <a href="convergereality.html" class="nav-link"> Book Part 1 </a>
           </li>
         </ul>
       </nav>
