--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
   <title>View My Work</title>
 </head>
 
-<body>
+ <body>
   <header>
     <div class="menu-btn">
       <div class="btn-line"></div>
@@ -41,6 +41,9 @@
         </li>
         <li class="nav-item">
           <a href="teste.html" class="nav-link"> More Work </a>
+        </li>
+        <li class="nav-item">
+          <a href="convergereality.html" class="nav-link"> Book Part 1 </a>
         </li>
       </ul>
     </nav>
