--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,9 @@
           <li class="nav-item">
             <a href="teste.html" class="nav-link"> More Work </a>
           </li>
+          <li class="nav-item">
+            <a href="convergereality.html" class="nav-link"> Book Part 1 </a>
+          </li>
         </ul>
       </nav>
     </header>
