--- a/home.html
+++ b/home.html
@@ -20,9 +20,7 @@
   </body> 
   <br />
  </head>
-
-
-<body id="bg-img">
+  <body id="bg-img">
     <header>
       <div class="menu-btn">
         <div class="btn-line"></div>
@@ -47,6 +45,9 @@
           </li>
           <li class="nav-item">
             <a href="teste.html" class="nav-link"> More Work </a>
+          </li>
+          <li class="nav-item">
+            <a href="convergereality.html" class="nav-link"> Book Part 1 </a>
           </li>
         </ul>
       </nav>
