--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
           <li class="nav-item">
             <a href="teste.html" class="nav-link"> More Work </a>
           </li>
+          <li class="nav-item">
+            <a href="convergereality.html" class="nav-link"> Book </a>
+          </li>
         </ul>
       </nav>
     </header>
