--- a/teste.html
+++ b/teste.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/style3.css" />
   <link rel="stylesheet" href="css/main.css" />
 
-<body>
+ <body>
 
   <header>
     <div class="menu-btn">
@@ -42,6 +42,9 @@
         </li>
         <li class="nav-item">
           <a href="teste.html" class="nav-link"> More Work </a>
+        </li>
+        <li class="nav-item">
+          <a href="convergereality.html" class="nav-link"> Book Part 1 </a>
         </li>
       </ul>
     </nav>
