--- a/about.html
+++ b/about.html
@@ -29,6 +29,9 @@
           <li class="nav-item">
             <a href="convergereality.html" class="nav-link"> Book Part 1 </a>
           </li>
+          <li class="nav-item">
+            <a href="Surreal.html" class="nav-link"> Surreal </a>
+          </li>
         </ul>
       </nav>
     </header>
