--- a/home.html
+++ b/home.html
@@ -49,6 +49,9 @@
           <li class="nav-item">
             <a href="convergereality.html" class="nav-link"> Book Part 1 </a>
           </li>
+          <li class="nav-item">
+            <a href="Surreal.html" class="nav-link"> Surreal </a>
+          </li>
         </ul>
       </nav>
     </header>
