--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a href="teste.html" class="nav-link"> More Work </a>
           </li>
           <li class="nav-item">
-            <a href="convergereality.html" class="nav-link"> Book </a>
+            <a href="convergereality.html" class="nav-link"> Book Part 1 </a>
           </li>
         </ul>
       </nav>
