--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <a href="home.html" class="nav-link"> Home </a>
           </li>
           <li class="nav-item current">
-            <a href="TIAGO.html" class="nav-link"> About Me </a>
+            <a href="about.html" class="nav-link"> About Me </a>
           </li>
           <li class="nav-item">
             <a href="work.html" class="nav-link"> My Work </a>
